# QSOL

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  PLAN.md  QSOL_reference.md  README.md  ROADMAP.md  TODO.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BACKEND.md  BACKEND_V1_LIMITS.md  CLI.md  CODEBASE.md  COMPILER.md  CUSTOM_RUNTIME.md  EXTENDING_QSOL.md  PLUGINS.md  QSOL_SYNTAX.md  README.md  RUNTIMES.md  STDLIB.md  TUTORIAL.md
docs/tutorials/: 01-first-program.md  02-writing-your-own-model.md  03-compiling-running-and-reading-results.md  04-custom-unknowns-functions-and-predicates.md  README.md  model.qsol  model.qsol.toml
editors/vscode-qsol/: .vscodeignore  README.md  language-configuration.json  package.json  qsol-syntax-0.1.0.vsix
examples/: README.md  run_equivalence_suite.py
examples/generic_bqm/: README.md  generic_bqm.instance.json  generic_bqm.qsol  generic_bqm.qsol.toml  test_equivalence.py
examples/min_bisection/: README.md  min_bisection.instance.json  min_bisection.qsol  min_bisection.qsol.toml  test_equivalence.py
examples/partition_equal_sum/: README.md  partition_equal_sum.instance.json  partition_equal_sum.qsol  partition_equal_sum.qsol.toml  test_equivalence.py
examples/qubo/: README.md  bounded_max_cut.instance.json  bounded_max_cut.qsol  bounded_max_cut.weighted.instance.json  exact_k_subset.instance.json  exact_k_subset.qsol  mapping_collision_penalty.instance.json  mapping_collision_penalty.qsol
examples/simple_subset/: simple_subset.qsol  simple_subset.qsol.toml
examples/tutorials/: README.md  all_different_slots.qsol  all_different_slots.qsol.toml  assignment_balance.instance.json  assignment_balance.qsol  assignment_balance.qsol.toml  custom_types.qsol  custom_types_usage.qsol  custom_types_usage.qsol.toml  derived_max_clique.qsol  derived_max_clique.qsol.toml  directed_acyclic_subgraph.qsol  directed_acyclic_subgraph.qsol.toml  first_program.instance.json  first_program.qsol  first_program.qsol.toml  graph_coloring.qsol  graph_coloring.qsol.toml  graph_helpers.qsol  graph_helpers.qsol.toml  job_sequencing.qsol  job_sequencing_max.qsol  (+22 more)
tests/: test_equivalence_utilities.py  test_support_modules.py
(+104 files in other folders)
