[project]
name = "qsol"
version = "0.1.0"
description = "QSOL compiler frontend and dimod backend"
readme = "README.md"
authors = [
  { name = "GBisi", email = "giuseppe.bisicchia@phd.unipi.it" }
]
requires-python = ">=3.11"
dependencies = [
  "click==8.3.1",
  "dimod==0.12.21",
  "lark==1.3.1",
  "rich==14.3.2",
  "typer==0.23.1",
]

[project.optional-dependencies]
dev = [
  "pre-commit==4.3.0",
  "mypy==1.17.1",
  "pytest==8.4.1",
  "pytest-cov==5.0.0",
  "ruff==0.12.7",
]
qiskit = [
  "qiskit==2.2.3",
  "qiskit-algorithms==0.4.0",
  "qiskit-aer==0.17.1",
  "qiskit-ibm-runtime==0.43.1",
  "qiskit-optimization==0.7.0",
]

[project.scripts]
qsol = "qsol.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=qsol",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["B008", "E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
strict = true
